apps/core-api/overlays/staging/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core-api
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/environment: staging
        app.kubernetes.io/instance: core-api-staging
    spec:
      containers:
        - name: app
